name:                cardano-ledger-heap-profiler
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

executable heap-profiler
  main-is:             Main.hs

  build-depends:       base
                     , cardano-ledger
                     , cardano-ledger-test
                     , cardano-prelude
                     , hedgehog

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-all-missed-specialisations
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  if (!flag(development))
    ghc-options:         -Werror

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
